# hyrise-generalized-dedup

src/: CMakeLists.txt
src/benchmark/: join_order_benchmark.cpp  tpch_benchmark.cpp
src/benchmarklib/: abstract_table_generator.cpp  benchmark_table_encoder.cpp
src/lib/: CMakeLists.txt  constant_mappings.cpp
src/lib/import_export/binary/: binary_parser.cpp  binary_parser.hpp  binary_writer.cpp  binary_writer.hpp
src/lib/operators/: print.cpp
src/lib/operators/join_hash/: join_hash_steps.hpp
src/lib/operators/table_scan/: column_between_table_scan_impl.cpp  column_between_table_scan_impl.hpp  column_vs_value_table_scan_impl.cpp
src/lib/storage/: base_gd_segment.hpp  base_segment_encoder.hpp  chunk_encoder.cpp  chunk_encoder.hpp  create_iterable_from_segment.hpp  create_iterable_from_segment.ipp  dictionary_segment.hpp  encoding_type.hpp  gd_segment_v1.cpp  gd_segment_v1.hpp  gd_segment_v1_fixed.cpp  gd_segment_v1_fixed.hpp  resolve_encoded_segment_type.hpp  segment_encoding_utils.cpp
src/lib/storage/dictionary_segment/: dictionary_encoder.hpp  dictionary_segment_iterable.hpp
src/lib/storage/frame_of_reference_segment/: frame_of_reference_encoder.hpp
src/lib/storage/gd_segment/: _gd_segment_v1_devbits.cpp  _gd_segment_v1_devbits.hpp  config_parser.hpp  gd_segment_v1_devbits.cpp  gd_segment_v1_devbits.hpp  gdd_lsb.hpp  helpers.hpp  performance_test.hpp  permute.hpp  result_writer.hpp  segment_performance.hpp  v1_encoder.hpp  v1_fixed_encoder.hpp  v1_fixed_iterable.hpp  v1_iterable.hpp
src/lib/storage/gd_segment/devbits/: _gd_segment_v1_devbits.cpp  _gd_segment_v1_devbits.hpp  gd_segment_v1_fwd.cpp  gd_segment_v1_fwd.hpp  readme.md  v1_devbits_encoder.hpp  v1_devbits_iterable.hpp
src/lib/storage/lz4_segment/: lz4_encoder.hpp
src/lib/storage/reference_segment/: reference_segment_iterable.hpp
src/lib/storage/run_length_segment/: run_length_encoder.hpp
src/test/: CMakeLists.txt  base_test.hpp
src/test/lib/storage/: gd_segment_test.cpp
